--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -25,23 +25,14 @@
         "skipDefaultLibCheck": true,
         "baseUrl": ".",
         "paths": {
-            "@/components/*": ["src/components/*"],
-            "@/containers/*": ["src/containers/*"],
-            "@/fixtures/*": ["src/fixtures/*"],
-            "@/helpers/*": ["src/helpers/*"],
-            "@/lib/*": ["src/lib/*"],
-            "@/providers/*": ["src/providers/*"],
-            "@/services/*": ["src/services/*"],
-            "@/types/*": ["src/types/*"],
-            "@/utils/*": ["src/utils/*"],
-            "@hieu-next-kflix/containers": ["libs/containers/src/index.ts"],
-            "@hieu-next-kflix/fixtures": ["libs/fixtures/src/index.ts"],
-            "@hieu-next-kflix/libs/component": ["libs/component/src/index.ts"],
-            "@hieu-next-kflix/providers": ["libs/providers/src/index.ts"],
-            "@hieu-next-kflix/registries": ["libs/registries/src/index.ts"],
-            "@hieu-next-kflix/services": ["libs/services/src/index.ts"],
-            "@hieu-next-kflix/types": ["libs/types/src/index.ts"],
-            "@hieu-next-kflix/utils": ["libs/utils/src/index.ts"]
+            "@libs/containers": ["libs/containers/src/index.ts"],
+            "@libs/fixtures": ["libs/fixtures/src/index.ts"],
+            "@libs/component": ["libs/component/src/index.ts"],
+            "@libs/providers": ["libs/providers/src/index.ts"],
+            "@libs/registries": ["libs/registries/src/index.ts"],
+            "@libs/services": ["libs/services/src/index.ts"],
+            "@libs/types": ["libs/types/src/index.ts"],
+            "@libs/utils": ["libs/utils/src/index.ts"]
         },
         "plugins": [
             {
@@ -50,6 +41,6 @@
         ],
         "types": ["jest", "node"]
     },
-    "include": ["**/*.ts", "**/*.tsx", "**/*.js", "**/*.jsx", "next-env.d.ts"],
+    "include": ["**/*.ts", "**/*.tsx", "**/*.js", "**/*.jsx", "next-env.d.ts","./libs/*/src/**/*","./apps/*/src/**/*"],
     "exclude": ["node_modules", "tmp"]
 }
