feat/: added cypress component test for some libs and apps

--- a/libs/component/project.json
+++ b/libs/component/project.json
@@ -11,6 +11,14 @@
             "options": {
                 "lintFilePatterns": ["libs/component/**/*.{ts,tsx,js,jsx}"]
             }
+        },
+        "component-test": {
+            "executor": "@nx/cypress:cypress",
+            "options": {
+                "cypressConfig": "libs/component/cypress.config.ts",
+                "testingType": "component",
+                "skipServe": true
+            }
         }
     }
 }
