--- a/apps/browse/project.json
+++ b/apps/browse/project.json
@@ -10,10 +10,10 @@
             "defaultConfiguration": "production",
             "options": {
                 "outputPath": "dist/apps/browse",
-                "assets":[
+                "assets": [
                     {
-                        "input": "./libs/utils/src/lib/assets", 
-                        "glob": "**/*", 
+                        "input": "./libs/utils/src/lib/assets",
+                        "glob": "**/*",
                         "output": "assets"
                     }
                 ]
@@ -31,7 +31,7 @@
             "options": {
                 "buildTarget": "browse:build",
                 "dev": true,
-                "port":4100
+                "port": 4201
             },
             "configurations": {
                 "development": {
@@ -69,6 +69,14 @@
             "outputs": ["{options.outputFile}"],
             "options": {
                 "lintFilePatterns": ["apps/browse/**/*.{ts,tsx,js,jsx}"]
+            }
+        },
+        "component-test": {
+            "executor": "@nx/cypress:cypress",
+            "options": {
+                "cypressConfig": "apps/browse/cypress.config.ts",
+                "testingType": "component",
+                "skipServe": true
             }
         }
     },
