--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "scripts": {
         "dev:homepage": "npx nx serve homepage",
         "dev:signin": "npx nx serve signin",
-        "dev": "npx nx run-many --target=serve --projects=homepage,browse,films,series,signin,signup, --parallel=6"
+        "dev": "npx nx run-many --target=serve --projects=homepage,browse,films,series,signin,signup, --parallel=6",
+        "test:browse": "npx nx component-test browse --watch"
     },
     "private": true,
     "dependencies": {
@@ -29,6 +30,7 @@
         "@babel/core": "^7.14.5",
         "@babel/eslint-parser": "^7.22.11",
         "@babel/preset-react": "^7.14.5",
+        "@cypress/webpack-dev-server": "^2.0.0",
         "@nx/cypress": "16.8.1",
         "@nx/eslint-plugin": "16.8.1",
         "@nx/jest": "16.8.1",
@@ -75,6 +77,7 @@
         "eslint-plugin-react-hooks": "4.6.0",
         "eslint-plugin-simple-import-sort": "^10.0.0",
         "eslint-plugin-unused-imports": "1.1.5",
+        "html-webpack-plugin": "^5.5.0",
         "jest": "^29.4.1",
         "jest-environment-jsdom": "^29.4.1",
         "nx": "16.8.1",
@@ -83,6 +86,7 @@
         "prettier-eslint": "^13.0.0",
         "react-refresh": "^0.10.0",
         "standard": "^16.0.4",
+        "swc-loader": "0.1.15",
         "ts-jest": "^29.1.0",
         "ts-node": "10.9.1",
         "typescript": "^5.2.2",
