feat/: added e2e test for homepage and sign in pages

--- a/apps/homepage/project.json
+++ b/apps/homepage/project.json
@@ -70,6 +70,19 @@
             "options": {
                 "lintFilePatterns": ["apps/homepage/**/*.{ts,tsx,js,jsx}"]
             }
+        },
+        "e2e": {
+            "executor": "@nx/cypress:cypress",
+            "options": {
+                "cypressConfig": "apps/homepage/cypress.config.ts",
+                "testingType": "e2e",
+                "devServerTarget": "homepage:serve"
+            },
+            "configurations": {
+                "production": {
+                    "devServerTarget": "homepage:serve:production"
+                }
+            }
         }
     },
     "tags": []
