--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
     "license": "MIT",
     "scripts": {
         "dev:homepage": "npx nx serve homepage",
+        "dev:browse": "npx nx serve browse",
         "dev:signin": "npx nx serve signin",
         "dev": "npx nx run-many --target=serve --projects=homepage,browse,films,series,signin,signup, --parallel=6",
-        "test:browse": "npx nx component-test browse --watch",
-        "test:homepage": "npx nx component-test homepage --watch",
-        "open:cy": "npx cypress open"
+        "test:browse": "npx nx e2e browse --watch",
+        "test:homepage": "npx nx e2e homepage homepage --watch",
+        "test:signin": "npx nx e2e signin signin --watch",
+        "test": "npx nx run-many --target=e2e --watch"
     },
     "private": true,
     "dependencies": {
@@ -33,6 +35,7 @@
         "@babel/eslint-parser": "^7.22.11",
         "@babel/preset-react": "^7.14.5",
         "@cypress/webpack-dev-server": "^2.0.0",
+        "@cypress/webpack-preprocessor": "^6.0.0",
         "@nx/cypress": "16.8.1",
         "@nx/eslint-plugin": "16.8.1",
         "@nx/jest": "16.8.1",
