--- a/apps/homepage/tsconfig.json
+++ b/apps/homepage/tsconfig.json
@@ -28,7 +28,8 @@
     "**/*.js",
     "**/*.jsx",
     "next-env.d.ts",
-    "../../dist/apps/homepage/.next/types/**/*.ts"
+    "../../dist/apps/homepage/.next/types/**/*.ts",
+    "../../apps/homepage/.next/types/**/*.ts"
   ],
   "exclude": [
     "node_modules",
