--- a/apps/browse/project.json
+++ b/apps/browse/project.json
@@ -70,6 +70,19 @@
             "options": {
                 "lintFilePatterns": ["apps/browse/**/*.{ts,tsx,js,jsx}"]
             }
+        },
+        "e2e": {
+            "executor": "@nx/cypress:cypress",
+            "options": {
+                "cypressConfig": "apps/browse/cypress.config.ts",
+                "testingType": "e2e",
+                "devServerTarget": "browse:serve"
+            },
+            "configurations": {
+                "production": {
+                    "devServerTarget": "browse:serve:production"
+                }
+            }
         }
     },
     "tags": []
