--- a/apps/films/project.json
+++ b/apps/films/project.json
@@ -10,10 +10,10 @@
             "defaultConfiguration": "production",
             "options": {
                 "outputPath": "dist/apps/films",
-                "assets":[
+                "assets": [
                     {
-                        "input": "./libs/utils/src/lib/assets", 
-                        "glob": "**/*", 
+                        "input": "./libs/utils/src/lib/assets",
+                        "glob": "**/*",
                         "output": "assets"
                     }
                 ]
@@ -31,7 +31,7 @@
             "options": {
                 "buildTarget": "films:build",
                 "dev": true,
-                "port":4202
+                "port": 4202
             },
             "configurations": {
                 "development": {
@@ -69,6 +69,19 @@
             "outputs": ["{options.outputFile}"],
             "options": {
                 "lintFilePatterns": ["apps/films/**/*.{ts,tsx,js,jsx}"]
+            }
+        },
+        "e2e": {
+            "executor": "@nx/cypress:cypress",
+            "options": {
+                "cypressConfig": "apps/films/cypress.config.ts",
+                "testingType": "e2e",
+                "devServerTarget": "films:serve"
+            },
+            "configurations": {
+                "production": {
+                    "devServerTarget": "films:serve:production"
+                }
             }
         }
     },
