feat/: added component test for right header

--- a/apps/films/tsconfig.json
+++ b/apps/films/tsconfig.json
@@ -27,7 +27,8 @@
     "**/*.js",
     "**/*.jsx",
     "next-env.d.ts",
-    "../../apps/films/.next/types/**/*.ts"
+    "../../apps/films/.next/types/**/*.ts",
+    "../../dist/apps/films/.next/types/**/*.ts"
   ],
   "exclude": [
     "node_modules",
