--- a/package.json
+++ b/package.json
@@ -5,15 +5,19 @@
     "scripts": {
         "dev:homepage": "npx nx serve homepage",
         "dev:browse": "npx nx serve browse",
+        "dev:series": "npx nx serve series",
+        "dev:films": "npx nx serve films",
         "dev:signin": "npx nx serve signin",
         "dev:signup": "npx nx serve signup",
-        "dev": "npx nx run-many --target=serve --projects=homepage,browse,films,series,signin,signup, --parallel=6",
+        "dev": "npx nx run-many --target=serve --projects=homepage,browse,films,series,signin,signup --parallel=6",
         
         "test:browse": "npx nx e2e browse --watch",
         "test:homepage": "npx nx e2e homepage --watch",
+        "test:series": "npx nx e2e series --watch",
+        "test:films": "npx nx e2e films --watch",
         "test:signin": "npx nx e2e signin --watch",
         "test:signup": "npx nx e2e signup --watch",
-        "test": "npx nx run-many --target=e2e --watch"
+        "test": "npx nx run-many --target=e2e --projects=homepage,browse,films,series,signin,signup --watch --parallel=6"
     },
     "private": true,
     "dependencies": {
