--- a/apps/browse/tsconfig.json
+++ b/apps/browse/tsconfig.json
@@ -32,11 +32,11 @@
         "jest.config.ts",
         "src/**/*.spec.ts",
         "src/**/*.test.ts",
-        "cypress/**/*",
-        "cypress.config.ts",
-        "**/*.cy.ts",
-        "**/*.cy.js",
-        "**/*.cy.tsx",
-        "**/*.cy.jsx"
+        // "cypress/**/*",
+        // "cypress.config.ts",
+        // "**/*.cy.ts",
+        // "**/*.cy.js",
+        // "**/*.cy.tsx",
+        // "**/*.cy.jsx"
     ]
 }
