feat/: added component test for left nav header

--- a/libs/component/project.json
+++ b/libs/component/project.json
@@ -1,5 +1,5 @@
 {
-    "name": "libs-component",
+    "name": "component",
     "$schema": "../../node_modules/nx/schemas/project-schema.json",
     "sourceRoot": "libs/component/src",
     "projectType": "library",
