--- a/.env.local.dist
+++ b/.env.local.dist
@@ -13,6 +13,7 @@ NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET
 NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID
 NEXT_PUBLIC_FIREBASE_APP_ID=NEXT_PUBLIC_FIREBASE_APP_ID
 NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID
+NEXT_PUBLIC_FIREBASE_REALTIME_DB_URL=NEXT_PUBLIC_FIREBASE_REALTIME_DB_URL
 
 NEXT_PUBLIC_SECURITY_CSRF_SECRET_KEY=NEXT_PUBLIC_SECURITY_CSRF_SECRET_KEY
 NEXT_PUBLIC_DOMAINS_CONTENT_SECURITY_POLICY='http://localhost:20000'
