--- a/apps/realtime-films/project.json
+++ b/apps/realtime-films/project.json
@@ -1,7 +1,7 @@
 {
-    "name": "signin",
+    "name": "realtime-films",
     "$schema": "../../node_modules/nx/schemas/project-schema.json",
-    "sourceRoot": "apps/signin",
+    "sourceRoot": "apps/realtime-films",
     "projectType": "application",
     "targets": {
         "build": {
@@ -9,7 +9,7 @@
             "outputs": ["{options.outputPath}"],
             "defaultConfiguration": "production",
             "options": {
-                "outputPath": "dist/apps/signin",
+                "outputPath": "dist/apps/realtime-films",
                 "assets": [
                     {
                         "input": "./libs/utils/src/lib/assets",
@@ -20,7 +20,7 @@
             },
             "configurations": {
                 "development": {
-                    "outputPath": "apps/signin"
+                    "outputPath": "apps/realtime-films"
                 },
                 "production": {}
             }
@@ -29,17 +29,17 @@
             "executor": "@nx/next:server",
             "defaultConfiguration": "development",
             "options": {
-                "buildTarget": "signin:build",
+                "buildTarget": "realtime-films:build",
                 "dev": true,
-                "port": 4205
+                "port": 4204
             },
             "configurations": {
                 "development": {
-                    "buildTarget": "signin:build:development",
+                    "buildTarget": "realtime-films:build:development",
                     "dev": true
                 },
                 "production": {
-                    "buildTarget": "signin:build:production",
+                    "buildTarget": "realtime-films:build:production",
                     "dev": false
                 }
             }
@@ -47,14 +47,14 @@
         "export": {
             "executor": "@nx/next:export",
             "options": {
-                "buildTarget": "signin:build:production"
+                "buildTarget": "realtime-films:build:production"
             }
         },
         "test": {
             "executor": "@nx/jest:jest",
             "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
             "options": {
-                "jestConfig": "apps/signin/jest.config.ts",
+                "jestConfig": "apps/realtime-films/jest.config.ts",
                 "passWithNoTests": true
             },
             "configurations": {
@@ -68,20 +68,7 @@
             "executor": "@nx/linter:eslint",
             "outputs": ["{options.outputFile}"],
             "options": {
-                "lintFilePatterns": ["apps/signin/**/*.{ts,tsx,js,jsx}"]
-            }
-        },
-        "e2e": {
-            "executor": "@nx/cypress:cypress",
-            "options": {
-                "cypressConfig": "apps/signin/cypress.config.ts",
-                "testingType": "e2e",
-                "devServerTarget": "signin:serve"
-            },
-            "configurations": {
-                "production": {
-                    "devServerTarget": "signin:serve:production"
-                }
+                "lintFilePatterns": ["apps/realtime-films/**/*.{ts,tsx,js,jsx}"]
             }
         }
     },
