feat/: remove realtime films route

--- a/package.json
+++ b/package.json
@@ -9,9 +9,8 @@
         "dev:films": "npx nx serve films",
         "dev:signin": "npx nx serve signin",
         "dev:signup": "npx nx serve signup",
-        "dev:realtime-films": "npx nx serve realtime-films",
         "dev:dashboard": "npx nx serve dashboard",
-        "dev": "npx nx run-many --target=serve --projects=homepage,browse,films,series,signin,signup,realtime-films,dashboard --parallel=8",
+        "dev": "npx nx run-many --target=serve --projects=homepage,browse,films,series,signin,signup,dashboard --parallel=7",
         "e2e:browse": "npx nx e2e browse --watch",
         "e2e:homepage": "npx nx e2e homepage --watch",
         "e2e:series": "npx nx e2e series --watch",
